exports[`RadioGroup [common] example testing should match snapshot(s) for default 1`] = `
<span
  className="lucid-RadioGroup">
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Superman",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Superman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Batman",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Batman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Wonder Woman",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Wonder Woman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Aquaman",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Aquaman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Robin",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Robin
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-as-prop 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Captain America",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Captain America
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Iron Man",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Iron Man
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Thor",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Thor
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hulk",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={true}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Hulk
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Black Widow",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Black Widow
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hawkeye",
      }
    }
    callbackId={5}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Hawkeye
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-from-child 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Leonardo",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Leonardo
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Raphael",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Raphael
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Donatello",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={true}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Donatello
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Michelangelo",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Michelangelo
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Venus",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Venus
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for stateful 1`] = `
<span
  className="lucid-RadioGroup">
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Alvin",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Alvin
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Simon",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Simon
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Theodore",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }>
    <RadioGroup.Label>
      Theodore
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;
